--- a/typing-test.html
+++ b/typing-test.html
@@ -26,7 +26,7 @@
                     </div>
                     <textarea id="quoteInput" placeholder="Type Here!!!" class="m-2" cols="40" rows="4"></textarea>
                 </div>
-                <p id="result" class="mb-4 answer-text">You typed it right</p>
+                <p id="result" class="mb-4 answer-text">You typed it right!</p>
                 <button id="submitBtn" class="mr-3 pl-3 pr-3 p-2 submit-style">Submit</button>
                 <button id="resetBtn" class="ml-3 pl-3 pr-3 p-2 reset-style">Reset</button>
             </div>
